--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
   </head>
   <body>
     <h1>Hello World!</h1>
+    <table>
+      <caption>Table Test</caption>
+      <thead>
+        <tr>
+          <td>Left</td>
+          <td>Right</td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>First</td>
+          <td>Second</td>
+        </tr>
+      </tbody>
+    </table>
     We are using Node.js <span id="node-version"></span>,
     Chromium <span id="chrome-version"></span>,
     and Electron <span id="electron-version"></span>.
